[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
line_length = 79
profile = "black"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "prefect_prom_exporter"
description = "prometheus exporter for prefect."
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Marcel Johannesmann", email = "mj0nez@fn.de" }]
keywords = ["prefect", "prometheus", "ETL"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["prefect>=2.11,<2.12", "prometheus-client>=0.17,<0.18"]
dynamic = ["readme", "version"]


[project.urls]
Changelog = "https://github.com/mj0nez/prefect-prometheus-exporter/releases"
Homepage = "https://github.com/mj0nez/prefect-prometheus-exporter/"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_prefect_prom_exporter.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
